Add Vote Transfer Object